fix dark mode

--- a/src/css/components/modal-rating.css
+++ b/src/css/components/modal-rating.css
@@ -61,7 +61,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: 18px 18px;
-  transition: transform 0.2s ease, filter 0.2s ease;
+  transition: transform var(---transition), filter var(---transition);
 }
 
 .rating-form-radio:hover + label,
@@ -80,7 +80,7 @@
 
 .rating-form-radio:active + label {
   transform: scale(0.95);
-  transition: transform 0.1s ease;
+  transition: transform var(---transition);
 }
 
 .rating-form-group-container {
@@ -98,14 +98,19 @@
 .rating-form-textarea {
   width: 100%;
   padding: 12px 14px;
-  border: 1px solid #fff;
+  border: 1px solid var(--color-white);
   border-radius: 30px;
   background-color: transparent;
-  color: rgba(244, 244, 244, 0.6);
+  color: var(--color-grey-60);
   font-size: 14px;
   line-height: 1.29;
-  transition: border-color 0.3s ease;
+  transition: border-color var(--transition);
   cursor: text;
+}
+
+html[data-theme='dark'] .rating-form-input,
+html[data-theme='dark'] .rating-form-textarea {
+  border-color: var(--color-white-10);
 }
 
 .rating-form-textarea {
@@ -117,19 +122,25 @@
 .rating-form-input:focus,
 .rating-form-textarea:focus {
   outline: none;
-  border-color: #eea10c;
-  box-shadow: 0 0 4px rgba(238, 161, 12, 0.5);
-  transition: border-color 0.3s ease, box-shadow 0.3s ease;
+  border-color: var(--color-white-80);
+  transition: border-color var(--transition) box-shadow var(---transition);
+}
+
+html[data-theme='dark'] .rating-form-input:hover,
+html[data-theme='dark'] .rating-form-input:focus,
+html[data-theme='dark'] .rating-form-textarea:hover,
+html[data-theme='dark'] .rating-form-textarea:focus {
+  border-color: var(--color-white-80);
 }
 
 .rating-form-input::placeholder,
 .rating-form-textarea::placeholder {
-  color: rgba(244, 244, 244, 0.6);
+  color: var(--color-white-60);
 }
 
 .rating-form-btn {
-  background-color: #fff;
-  color: #000;
+  background-color: var(--color-white);
+  color: var(--color-black);
   border: 1px solid transparent;
   border-radius: 30px;
   padding: 12px 0;
@@ -138,19 +149,15 @@
   outline: none;
   box-shadow: none;
   transform: none;
-  transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
+  transition: background-color var(--transition), color var(---transition),
+    box-shadow var(--transition);
 }
 
 .rating-form-btn:hover,
 .rating-form-btn:focus {
   background-color: transparent;
-  color: #fff;
-  border: 1px solid #fff;
-  box-shadow: 0 4px 15px rgba(238, 161, 12, 0.5);
-}
-
-.rating-form-btn:active {
-  box-shadow: 0 0 20px rgba(238, 161, 12, 0.8);
+  color: var(--color-white);
+  border: 1px solid var(--color-white);
 }
 
 @media screen and (min-width: 768px) {
